fix task overflow

--- a/src/components/NewTaskInput/NewTaskInput.module.css
+++ b/src/components/NewTaskInput/NewTaskInput.module.css
@@ -10,8 +10,8 @@
 }
 .taskRow {
   width: 100%;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
   font-weight: 500;
   text-align: start;
   border: none;
