--- a/src/components/TaskListItem/TaskListItem.module.css
+++ b/src/components/TaskListItem/TaskListItem.module.css
@@ -19,6 +19,7 @@
 }
 .text {
   padding: 0.25rem 0.75rem;
+  display: block;
   font-weight: 500;
   text-overflow: ellipsis;
   overflow: hidden;
